# command-line-interface-based-chatbot

./: README.md  pyproject.toml
chatbot/: __init__.py  chatbot.py
